# autosetup

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: autosetup.rb
src/: lib.rs  main.rs
src/cli/: init.rs  mod.rs
src/compute/: mod.rs
src/templates/: config_templates.rs  mod.rs  notebook_templates.rs  python_scripts.rs
src/utils/: mod.rs
tests/: integration_test.rs  unit_test.rs
