[package]
name = "autosetup"
version = "0.1.0"
edition = "2021"
authors = ["Autosetup Contributors"]
description = "Rust CLI for Reproducible ML Fine-Tuning Projects"
license = "MIT"
repository = "https://github.com/Pranav-Karra-3301/autosetup"
homepage = "https://github.com/Pranav-Karra-3301/autosetup"
readme = "README.md"
keywords = ["ml", "machine-learning", "fine-tuning", "cli", "scaffold"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "autosetup"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
inquire = "0.7"
indicatif = "0.17"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tera = "1.20"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
which = "6.0"
regex = "1.10"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20"
include_dir = "0.7"
tempfile = "3.12"
walkdir = "2.5"
fs_extra = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0

[package.metadata.deb]
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/autosetup", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/autosetup/README", "644"],
]